Style buttons for scaling and prevent zooming on mobile devices.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -78,6 +78,7 @@ section {
 .button {
     color: black;
     border-color: #a6c6c6;
+    margin-bottom: 10px;
 }
 
 .button:hover {
